--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "tx-custom-boot"
 version = "0.1.0"
 edition = "2021"
+description = "crate to generate a boot.dat from a custom payload for the switch"
+repository = "https://github.com/marcograss/tx-custom-boot"
 
 [dependencies]
 sha2 = "0.10.2"
