code quality improvements

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
-name = "tx-custom-boot"
-version = "0.2.0"
-edition = "2021"
 description = "crate to generate a boot.dat from a custom payload for the switch"
-repository = "https://github.com/marcograss/tx-custom-boot"
+edition = "2021"
 license-file = "LICENSE"
+name = "tx-custom-boot"
+repository = "https://github.com/marcograss/tx-custom-boot"
+version = "0.3.0"
 
 [dependencies]
-sha2 = "0.10.2"
 binwrite = "0.2.1"
+conv = "0.3.3"
+sha2 = "0.10.2"
 thiserror = "1.0.31"
 
 [dev-dependencies]
